--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,32 @@
-spring.application.name=bookmanager
 
+spring.application.name=bookcollection
 
-# Configuration de la base de données PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookmanager
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5433/db_bookcollection
+spring.datasource.username=db_user
+spring.datasource.password=db_password
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+# spring.datasource.schema=classpath*:schema.sql
+# spring.datasource.data=classpath*:data.sql
 
-# Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#H2 Database configuration
+# database=h2
+# spring.datasource.schema=classpath*:schema.sql
+# spring.datasource.data=classpath*:data.sql
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
-# Port de l'application
-server.port=8080
+springdoc.api-docs.path=/docs
+springdoc.swagger-ui.path=/swagger
 
 
-# xdg-open target/site/jacoco/index.html
+logging.level.root=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+server.port=8082
