--- a/src/main/resources/application-ci.properties
+++ b/src/main/resources/application-ci.properties
@@ -1,1 +1,16 @@
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://postgres:5432/db_bookcollection
+
+spring.jpa.hibernate.ddl-auto=update
+
+springdoc.api-docs.path=/docs
+springdoc.swagger-ui.path=/swagger
+
+
+logging.level.root=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+server.port=5432
