--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 
 spring.application.name=bookcollection
 
-# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5433/db_bookcollection
-spring.datasource.username=db_user
-spring.datasource.password=db_password
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+# spring.datasource.url=jdbc:postgresql://localhost:5433/db_bookcollection
+# spring.datasource.username=db_user
+# spring.datasource.password=db_password
+# spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.mode=always
 # spring.datasource.schema=classpath*:schema.sql
 # spring.datasource.data=classpath*:data.sql
 
 #H2 Database configuration
-# database=h2
-# spring.datasource.schema=classpath*:schema.sql
-# spring.datasource.data=classpath*:data.sql
-# spring.datasource.url=jdbc:h2:mem:testdb
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.h2.console.enabled=true
+database=h2
+spring.datasource.schema=classpath*:schema.sql
+spring.datasource.data=classpath*:data.sql
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.path=/docs
@@ -29,4 +29,11 @@ springdoc.swagger-ui.path=/swagger
 logging.level.root=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
-server.port=8082
+
+
+
+springdoc.api-docs.path=/docs
+springdoc.swagger-ui.path=/swagger
+springdoc.swagger-ui.tagsSorter=alpha
+
+server.port=8080
